added link to github repo and fixed email address

--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
       <li><a href="https://samirsatam.github.io/resume.html" class="list-item__title">Resume</a></li>
     </ul>
 
+    <h2>Public Projects on GitHub</h2>
+    <ul>
+      <li><a href="https://github.com/samirsatam" class="list-item__title">Data Science: Coursework and Other projects.</a></li>
+    </ul>
+
     <h2>🔗 Profiles</h2>
     <ul>
       <li><a href="https://twitter.com/samirss">Twitter</a></li>
