--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,1 @@
-<iframe src="https://resume.creddle.io/embed/g7vwl12x1ct"  width=850 height=1100 seamless></iframe> 
+<iframe src="https://resume.creddle.io/resume/25ljr771lcn" width=850 height=1100 seamless></iframe> 
