Removed issue with resume due to creddle.io shutdown

--- a/resume.html
+++ b/resume.html
@@ -1,1 +1,1 @@
-<iframe src="https://resume.creddle.io/resume/25ljr771lcn" width=850 height=1100 seamless></iframe> 
+<iframe src="./Samir_Satam_Resume.pdf" width=850 height=1100 seamless></iframe>
